Redesigned agenda building process

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -4,136 +4,126 @@
 {% block content %}
 
 
-<div class="page-header">
-	<h1>{{ page_heading }}</h1>
-</div>
+<div class="container-fluid">
+  <div class="row">
 
-
-
-{# MEETING DETAILS #}
  
-<h1><small>Meeting details</small></h1>
-
-	{% ifequal editable_section 'is_meeting_details' %}
-		<div class="row">
-  		<div class="col-md-6">
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				
-				{% for hidden in existing_data_forms.hidden_fields %}
-   					<div class="form-group">
-   						{{ hidden }}
-   					</div>
-				{% endfor %}	
-
-    			{% for field in existing_data_forms.visible_fields %}
-					<div>
-			   			{{ field.label_tag }}
-			   			{% ifequal field.label "Date" %}
-      						<br>
-      						{{ field }}
-      					{% else %}
-	      					{{ field|setclass:"form-control" }}
-	      				{% endifequal %}
-					</div>
-					<br>
-				{% endfor %}
-   			 	<button type="submit" class="btn btn-primary" name="save_meeting_details_button" value="save_meeting_details" data-toggle="button">Save meeting details</button>
-				<button type="submit" class="btn btn-default" name="cancel_meeting_details_button" value="cancel_meeting_details" data-toggle="button">Discard changes</button>
-				<button type="submit" class="btn btn-danger" name="delete_meeting_button" value="delete_meeting" data-toggle="button">Delete meeting</button>
-			</form>
-		</div>
-		</div>
-		</div>
-
-	{% else %}
-
-	<div class="row">
-  	<div class="col-md-6">
-  	<div class="well">
-		<div class="panel panel-primary">
-			
-		<table class="table">
-			<thead>
-				<tr>
-					<th>{{ meeting.description }} of {{ account.group_name }}</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody> 
-				<tr>
-					<td><strong>Date</strong></td>
-					<td>{{ meeting.date }}</td>
-				</tr>
-				<tr>
-					<td><strong>Start time</strong></td>
-					<td>{{ meeting.start_time }}</td>
-				</tr>
-				<tr>
-					<td><strong>End time</strong></td>
-					<td>{{ meeting_end_time }}</td>
-				</tr>
-				<tr>
-					<td><strong>Scheduled duration</strong></td>
-					<td>{{ meeting_duration }}</td>
-				</tr>
-				<tr>
-					<td><strong>Location</strong></td>
-					<td>{{ meeting.location|linebreaks }}</td>
-				</tr>
-				<tr>
-					<td><strong>Notes</strong></td>
-					<td>{{ meeting.notes|linebreaks }}</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-		{% ifequal editable_section 'none' %}
-			<form action="" method="POST">
-				{% csrf_token %}
-				<button type="submit" class="btn btn-default" name="edit_meeting_details_button" value="edit_meeting_details" data-toggle="button">Edit meeting details</button>
-			</form>
-		{% endifequal %}
-	</div>
-	</div>
-	</div>
-	{% endifequal %}
+    <div class="col-md-2 sidebar">
+      <ul class="nav nav-sidebar">
+        <li><a href="#meeting_details">Meeting details</a></li>
+      </ul>
+      <ul class="nav nav-sidebar">
+        {% for item in items %}
+          <li>
+          <div>
+            <a href="#id_{{ item.item_no}}-heading">{{ item.item_no}}. {{ item.heading }}</a>
+            <div class="pull-right">
+              <form action="" method="POST">
+                {% csrf_token %}
+                {% ifnotequal item.item_no 1 %}
+                  <button type="submit" class="btn btn-default btn-xs" name="up_button" value="move_up_{{ item.item_no}}">
+                    <span class="glyphicon glyphicon-circle-arrow-up"></button>
+                {% endifnotequal %}
+                {% ifnotequal item.item_no item_count %}
+                  <button type="submit" class="btn btn-default btn-xs" name="down_button" value="move_down_{{ item.item_no}}">
+                  <span class="glyphicon glyphicon-circle-arrow-down"></button>
+                {% endifnotequal %}
+                <button type="submit" class="btn btn-default btn-xs" name="delete_button" value="delete_item_{{ item.item_no}}">
+                  <span class="glyphicon glyphicon-remove"></button>
+              </form>
+            </div><!-- ./pull-right -->
+          </div>
+          </li>
+        {% endfor %}
+      </ul>
+      <form action="" method="POST">
+        {% csrf_token %}
+        <ul class="nav nav-sidebar">
+          <li><button type="submit" class="btn btn-default" name="add_item_button" value="add_item" data-toggle="button">Add item</button></li>
+        </ul>
+      </form>
+    </div><!-- /.col-md-2 -->
 
 
-{# PRELIMINARY ITEMS #}
+    <div class="col-md-8 col-md-offset-1 main" id="meeting_details">
+      
+      <h1>{{ page_heading }}</h1>
+      
+      <h1><small>Meeting details</small></h1>
+      <div class="well">
+      <form action="" method="POST">
+        {% csrf_token %}
+        {% for hidden in existing_data_forms.hidden_fields %}
+          <div class="form-group">
+            {{ hidden }}
+          </div>
+        {% endfor %}	
+        {% for field in existing_data_forms.visible_fields %}
+          <div>
+            {{ field.label_tag }}
+            {% ifequal field.label "Date" %}
+              <br>
+              {{ field }}
+            {% else %}
+              {{ field|setclass:"form-control" }}
+            {% endifequal %}
+          </div>
+          <br>
+        {% endfor %}
+        <button type="submit" class="btn btn-primary" name="save_meeting_details_button" value="save_meeting_details" data-toggle="button">Save meeting details</button>
+        <button type="submit" class="btn btn-default" name="cancel_meeting_details_button" value="cancel_meeting_details" data-toggle="button">Discard changes</button>
+        <button type="submit" class="btn btn-danger" name="delete_meeting_button" value="delete_meeting" data-toggle="button">Delete meeting</button>
+      </form>
+      </div>
 
-<h1><small>Preliminary items</small></h1>
 
-	{% ifequal editable_section 'is_preliminary_items' %}
+      <form action="" method="POST">
+        {% csrf_token %}
+        {% for item in item_formlist %}
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              {{ item.heading|setclass:"form-control" }}
+            </div>
+          <div class="panel-body">
+            {{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
+            {{ item.explainer.label_tag }}{{ item.explainer|setclass:"form-control" }}
+            {{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}    
+          </div>
+          {% for hidden in item.hidden_fields %}
+            <div class="form-group">
+              {{ hidden }}
+            </div>
+          {% endfor %}
+          </div>
+        {% endfor %}
+        <button type="submit" class="btn btn-primary" name="save_items_button" value="save_items" data-toggle="button">Save items</button>
+      </form>
+      
+      
+      <div class="well">
+        {% ifequal editable_section 'none' %}
+          <a href={% url 'minutes-edit' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Create minutes from this agenda</button></a>
+          <a href={% url 'agenda-print' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Create a PDF of this agenda</button></a>
+          <a href={% url 'agenda-distribute' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Distribute this agenda</button></a>
+        {% endifequal %}
+      </div>
+      
+      <div class="spacer">
+      </div>      
 
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				{{ existing_data_formset.management_form }}
-				{% for item in existing_data_formset %}
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							{{ item.heading|setclass:"form-control" }}
-						</div>
-						<div class="panel-body">
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}    
-								{{ item.id|setclass:"form-control" }}
-						    	{{ item.variety|setclass:"form-control" }}
-						    	<br>
-						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
-						</div>
-					</div>
-				{% endfor %}
-				<button type="submit" class="btn btn-primary" name="save_preliminary_items_button" value="save_preliminary_items" data-toggle="button">Save preliminary items</button>
-			</form>
-		</div>
+	
+	
+    </div><!-- /.col-md-8 -->
+  </div><!-- ./row>
+</div><!-- ./container -->
 
-	{% else %}
+
+{% endblock %}
+
+{% comment %}
 
 		<div class="well">
-			{% for item in preliminary_items %}
+			{% for item in items %}
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<strong>{{ item.heading }}</strong>
@@ -149,8 +139,8 @@
 			{% ifequal editable_section 'none' %}
 				<form action="" method="POST">
 					{% csrf_token %}
-					<button type="submit" class="btn btn-default" name="edit_preliminary_items_button" value="edit_preliminary_items" data-toggle="button">Edit preliminary items</button>
-					<button type="submit" class="btn btn-default" name="add_preliminary_item_button" value="add_preliminary_item" data-toggle="button">Add a preliminary item</button>
+					<button type="submit" class="btn btn-default" name="edit_items_button" value="edit_items" data-toggle="button">Edit items</button>
+					<button type="submit" class="btn btn-default" name="add_item_button" value="add_item" data-toggle="button">Add an item</button>
 				</form>
 			{% endifequal %}
 		</div>
@@ -158,9 +148,9 @@
 	{% endifequal %}
 
 
-
-
-
+</div>
+      </div>
+    </div>
 
 {# TASKS REVIEW #}
 <h1><small>Task review</small></h1>
@@ -223,186 +213,6 @@
 	{% endifequal %}
 </div>
 
-
-{# REPORT ITEMS #}
-
-<h1><small>Reports</small></h1>
-
-	{% ifequal editable_section 'is_report_items' %}
-
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				{{ existing_data_formset.management_form }}
-				{% for item in existing_data_formset %}
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							{{ item.heading|setclass:"form-control" }}
-						</div>
-						<div class="panel-body">
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-								{{ item.explainer.label_tag }}{{ item.explainer|setclass:"form-control" }}
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}
-								{{ item.id|setclass:"form-control" }}
-						    	{{ item.variety|setclass:"form-control" }}
-						    	<br>
-						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
-						</div>
-					</div>
-				{% endfor %}
-				<button type="submit" class="btn btn-primary" name="save_report_items_button" value="save_report_items" data-toggle="button">Save report items</button>
-			</form>
-		</div>
-
-	{% else %}
-
-		<div class="well">
-			{% for item in report_items %}
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<strong>{{ item.heading }}</strong>
-						<p class="pull-right">{{ item.time_limit}} minutes</p>
-					</div>
-					<div class="panel-body">
-						<p class="text-muted">To be introduced by {{ item.explainer }}</p>
-						{{ item.background|linebreaks }}
-					</div>
-				</div>
-			{% endfor %}
-			{% ifequal editable_section 'none' %}
-				<form action="" method="POST">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-default" name="edit_report_items_button" value="edit_report_items" data-toggle="button">Edit reports</button>
-					<button type="submit" class="btn btn-default" name="add_report_item_button" value="add_report_item" data-toggle="button">Add a report</button>
-				</form>
-			{% endifequal %}
-		</div>
-		
-	{% endifequal %}
+{% endcomment %}
 
 
-{# MAIN ITEMS #}
-
-<h1><small>Main items</small></h1>
-
-	{% ifequal editable_section 'is_main_items' %}
-
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				{{ existing_data_formset.management_form }}
-				{% for item in existing_data_formset %}
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							{{ item.heading|setclass:"form-control" }}
-						</div>
-						<div class="panel-body">
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-								{{ item.explainer.label_tag }}{{ item.explainer|setclass:"form-control" }}
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}
-								{{ item.id|setclass:"form-control" }}
-						    	{{ item.variety|setclass:"form-control" }}
-						    	<br>
-						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
-						</div>
-					</div>
-				{% endfor %}
-				<button type="submit" class="btn btn-primary" name="save_main_items_button" value="save_main_items" data-toggle="button">Save main items</button>
-			</form>
-		</div>
-
-	{% else %}
-
-		<div class="well">
-			{% for item in main_items %}
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<strong>{{ item.heading }}</strong>
-						<p class="pull-right">{{ item.time_limit}} minutes</p>
-					</div>
-					<div class="panel-body">
-						<p class="text-muted">To be introduced by {{ item.explainer }}</p>
-						{{ item.background|linebreaks }}
-					</div>
-				</div>
-			{% endfor %}
-			{% ifequal editable_section 'none' %}
-				<form action="" method="POST">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-default" name="edit_main_items_button" value="edit_main_items" data-toggle="button">Edit main items</button>
-					<button type="submit" class="btn btn-default" name="add_main_item_button" value="add_main_item" data-toggle="button">Add a main item</button>
-				</form>
-			{% endifequal %}
-		</div>
-		
-	{% endifequal %}
-
-
-{# FINAL ITEMS #}
-
-<h1><small>Final items</small></h1>
-
-	{% ifequal editable_section 'is_final_items' %}
-
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				{{ existing_data_formset.management_form }}
-				{% for item in existing_data_formset %}
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							{{ item.heading|setclass:"form-control" }}
-						</div>
-						<div class="panel-body">
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}
-								{{ item.id|setclass:"form-control" }}
-						    	{{ item.variety|setclass:"form-control" }}
-						    	<br>
-						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
-						</div>
-					</div>
-				{% endfor %}
-				<button type="submit" class="btn btn-primary" name="save_final_items_button" value="save_final_items" data-toggle="button">Save final items</button>
-			</form>
-		</div>
-
-	{% else %}
-
-		<div class="well">
-			{% for item in final_items %}
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<strong>{{ item.heading }}</strong>
-						<p class="pull-right">{{ item.time_limit}} minutes</p>
-					</div>
-					{% ifnotequal item.background '' %}
-						<div class="panel-body">
-							{{ item.background|linebreaks }}
-						</div>
-					{% endifnotequal %}
-				</div>
-			{% endfor %}
-			{% ifequal editable_section 'none' %}
-				<form action="" method="POST">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-default" name="edit_final_items_button" value="edit_final_items" data-toggle="button">Edit final items</button>
-					<button type="submit" class="btn btn-default" name="add_final_item_button" value="add_final_item" data-toggle="button">Add a final item</button>
-				</form>
-			{% endifequal %}
-		</div>
-		
-	{% endifequal %}
-
-
-<div class="well">
-	{% ifequal editable_section 'none' %}
-		<a href={% url 'minutes-edit' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Create minutes from this agenda</button></a>
-		<a href={% url 'agenda-print' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Create a PDF of this agenda</button></a>
-		<a href={% url 'agenda-distribute' meeting_id %}><button type="button" class="btn btn-primary" data-toggle="button">Distribute this agenda</button></a>
-	{% endifequal %}
-	
-</div>
-
-
-{% endblock %}
