--- a/static/css/econvenor.css
+++ b/static/css/econvenor.css
@@ -156,7 +156,7 @@ fieldset[disabled] .btn-primary.active {
  * Adjust colours.
 */
 .btn-default {
-  color: #333333;
+  color: #563d7c;
   background-color: #eeeeee;
   border-color: #bbbbbb;
 }
@@ -352,3 +352,59 @@ thead {
 }
 
 
+
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile, show later */
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    border-right: 1px solid #eee;
+  }
+}
+
+
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+
+}
+.nav-sidebar li a {
+  padding-right: 20px;
+  padding-left: 20px;
+  color: #fff;
+}
+
+.nav-sidebar li {
+    padding: 20px 20px 20px 0;
+    border-bottom: 5px solid #eeeeee;
+}
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #ff0066;
+}
+
+
+/*
+ * Page end spacer
+ */
+ 
+.spacer {
+  padding-top: 500px;
+}
