--- a/templates/app_base.html
+++ b/templates/app_base.html
@@ -100,6 +100,22 @@
    			});
 		</script>
 
+		<script type="text/javascript">
+            $(function() {
+                $('ul li a').bind('click',function(event){
+                    var $anchor = $(this);
+                    $('html, body').stop().animate({
+                        scrollTop: $($anchor.attr('href')).offset().top-80
+                    }, 1000);
+                    event.preventDefault();
+                });
+            });
+		</script>
+
+
+
+
+
 	</body>
 </html>
 
