--- a/templates/app_base.html
+++ b/templates/app_base.html
@@ -78,11 +78,10 @@
       			</div>
 			</div>
 		</div>
-
-		<div class="container">
-				{% block content %}
-				{% endblock %}
-		</div>
+        <div class="container-fluid">
+            {% block content %}
+            {% endblock %}
+        </div><!-- ./container -->
 		
 		<script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -111,10 +110,6 @@
                 });
             });
 		</script>
-
-
-
-
 
 	</body>
 </html>
