Added an Ajax autosave function to app_base.py

--- a/templates/app_base.html
+++ b/templates/app_base.html
@@ -110,6 +110,21 @@
                 });
             });
 		</script>
+		
+		<script type="text/javascript">
+            function saveform() {
+                $('form.autosave').each(function() {
+                    $.ajax({
+                        data: 'save_items_button=save_items\&'+jQuery(this).serialize(),
+                        type: "POST",
+                        success: function(data){
+                            if(data && data == 'success') {alert('Success');}else{alert('Autosave may have failed');}
+                        }
+                    });
+                });
+            }
+            setInterval(saveform, 600 * 1000);
+        </script>
 
 	</body>
 </html>
