--- a/static/css/econvenor.css
+++ b/static/css/econvenor.css
@@ -4,14 +4,28 @@
  * Specify fonts.
  */
 
-@font-face {
-  font-family: 'Body font';
-  src: url(../fonts/SourceSansPro-Regular.woff);
-}
 
 @font-face {
-  font-family: 'Heading font';
-  src: url(../fonts/SourceSansPro-Regular.woff);
+    font-family: 'Body';
+    src: url('../fonts/sourcesanspro-regular-webfont.eot');
+    src: url('../fonts/sourcesanspro-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/sourcesanspro-regular-webfont.woff') format('woff'),
+         url('../fonts/sourcesanspro-regular-webfont.ttf') format('truetype'),
+         url('../fonts/sourcesanspro-regular-webfont.svg#Body') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Heading';
+    src: url('../fonts/sourcesanspro-regular-webfont.eot');
+    src: url('../fonts/sourcesanspro-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/sourcesanspro-regular-webfont.woff') format('woff'),
+         url('../fonts/sourcesanspro-regular-webfont.ttf') format('truetype'),
+         url('../fonts/sourcesanspro-regular-webfont.svg#Body') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 
@@ -22,7 +36,7 @@
  */
 
 body {
-  font-family: 'Body font', Helvetica, Arial, sans-serif;
+  font-family: 'Body', Helvetica, Arial, sans-serif;
   padding-top: 3em;
 /*  background-color: #eeeeee; */
   background-image: url('/static/images/texture.png');
@@ -293,7 +307,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Heading font', Helvetica, Arial, sans-serif;
+  font-family: 'Heading', Helvetica, Arial, sans-serif;
   font-weight: 300;
   line-height: 1.1;
   color: inherit;
