Moved Javascript scripts to econvenor.js

--- a/templates/app_base.html
+++ b/templates/app_base.html
@@ -87,45 +87,8 @@
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
 		<script src="{% static 'js/jqueryui-1.10.3.core.js' %}"></script>
 		<script src="{% static 'js/jqueryui-1.10.3.datepicker.js' %}"></script>
+		<script src="{% static 'js/econvenor.js' %}"></script>
 						
-		<script type="text/javascript">
-		var bootstrapButton = $.fn.button.noConflict()
-		$.fn.bootstrapBtn = bootstrapButton 
-		</script>
-		
-		<script type="text/javascript">
-    		$(function() {
-        		$('.datepicker').datepicker({ dateFormat: "yy-mm-dd" });
-   			});
-		</script>
-
-		<script type="text/javascript">
-            $(function() {
-                $('ul li a').bind('click',function(event){
-                    var $anchor = $(this);
-                    $('html, body').stop().animate({
-                        scrollTop: $($anchor.attr('href')).offset().top-80
-                    }, 1000);
-                    event.preventDefault();
-                });
-            });
-		</script>
-		
-		<script type="text/javascript">
-            function saveform() {
-                $('form.autosave').each(function() {
-                    $.ajax({
-                        data: 'save_items_button=save_items\&'+jQuery(this).serialize(),
-                        type: "POST",
-                        success: function(data){
-                            if(data && data == 'success') {alert('Success');}else{alert('Autosave may have failed');}
-                        }
-                    });
-                });
-            }
-            setInterval(saveform, 600 * 1000);
-        </script>
-
-	</body>
+    </body>
 </html>
 
