--- a/templates/app_base.html
+++ b/templates/app_base.html
@@ -80,7 +80,7 @@
 		</div>
         <div class="container-fluid">
             {% block content %}
-            {% endblock %}
+            {% endblock content %}
         </div><!-- ./container -->
 		
 		<script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
