--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -9,14 +9,14 @@
   <div class="col-sm-3 sidebar">
     <h2>Agenda navigation</h2>
     <ul class="nav nav-sidebar">
-      <li><a href="#meeting_details">Meeting details</a></li>
+      <li><a href="#meeting_details" class="tltip" data-toggle="tooltip" data-placement="top" title="Scroll to meeting details">Meeting details</a></li>
     </ul>
     
     <div id="ajax-sidebar">
     </div>
            
     <ul class="nav nav-sidebar">
-      <li><a href="#tasks">Appendix 1 - Tasks</a></li>
+      <li><a href="#tasks" class="tltip" data-toggle="tooltip" data-placement="top" title="Scroll to tasks">Appendix 1 - Tasks</a></li>
     </ul>
     <ul class="nav nav-sidebar">
       <li><button type="button" class="btn btn-primary jsbutton" id="save_button">Save all</button></li>
@@ -102,7 +102,7 @@
 	    </div><!-- ./panel -->
    	    <form action="" method="POST">
    	      {% csrf_token %}
-	      <button type="submit" class="btn btn-default" name="edit_meeting_details_button" value="edit_meeting_details" data-toggle="button">Edit meeting details</button>
+	      <button type="submit" class="btn btn-default" name="edit_meeting_details_button" value="edit_meeting_details">Edit meeting details</button>
 	    </form>
       {% endifequal %}
       </div><!-- ./well -->
