--- a/templates/app_base.html
+++ b/templates/app_base.html
@@ -16,8 +16,8 @@
 
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+		<link href="{% static 'css/jquery-ui-1.10.4.custom.min.css' %}" rel="stylesheet">
 		<link href="{% static 'css/econvenor.css' %}" rel="stylesheet">
-		<link href="{% static 'css/jqueryui-1.10.3.smoothness.css' %}" rel="stylesheet">
 	</head>
 
 	<body>
@@ -84,9 +84,8 @@
         </div><!-- ./container -->
 		
 		<script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
+		<script src="{% static 'js/jquery-ui-1.10.4.custom.min.js' %}"></script>
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
-		<script src="{% static 'js/jqueryui-1.10.3.core.js' %}"></script>
-		<script src="{% static 'js/jqueryui-1.10.3.datepicker.js' %}"></script>
 		<script src="{% static 'js/econvenor.js' %}"></script>
 						
     </body>
