Added spinners to time limit fields of agenda items

--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -9,7 +9,7 @@
               {{ item.heading|setclass:"form-control item-heading" }}
             </div>
           <div class="panel-body">
-            {{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
+            {{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"spinner" }}		
             {{ item.explainer.label_tag }}{{ item.explainer|setclass:"form-control" }}
             {{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}    
           </div>
