Added processing and saving of data from sidebar sort events

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -51,7 +51,7 @@
             {{ field.label_tag }}
             {% ifequal field.label "Date" %}
               <br>
-              {{ field }}
+              {{ field|setclass:"form-control datepicker" }}
             {% else %}
               {{ field|setclass:"form-control" }}
             {% endifequal %}
