--- a/docs/templates/agenda_distribute.html
+++ b/docs/templates/agenda_distribute.html
@@ -1,414 +1,53 @@
 {% extends "app_base.html" %}
+
+{% load staticfiles %}
+
 {% load setclass %}
 
 {% block content %}
 
 
-<div class="page-header">
-	<h1>Meeting agenda</h1>
-</div>
+<div class="row">
 
+  <div class="col-sm-3 sidebar">
+    <h2>Agenda navigation</h2>
+    <ul class="nav nav-sidebar">
+      <li><a href="#meeting_details" class="tltip" data-toggle="tooltip" data-placement="top" title="Scroll to meeting details">Meeting details</a></li>
+    </ul>
+    
+    <div id="ajax-sidebar">
+    </div>
+           
+    <ul class="nav nav-sidebar">
+      <li><a href="#tasks" class="tltip" data-toggle="tooltip" data-placement="top" title="Scroll to tasks">Appendix 1 - Tasks</a></li>
+    </ul>
+    <ul class="nav nav-sidebar">
+      <li><button type="button" class="btn btn-primary jsbutton" id="save_button">Save all</button></li>
+      <li><button type="button" class="btn btn-primary jsbutton" id="add_button">Add item</button></li>
+    </ul>
+    <ul class="nav nav-sidebar"> 
+        <li><a href={% url 'minutes-edit' meeting_id %}><button type="button" class="btn btn-primary saveonpress" data-toggle="button">Create minutes from this agenda</button></a></li>
+        <li><a href={% url 'agenda-print' meeting_id %}><button type="button" class="btn btn-primary saveonpress" data-toggle="button">Create a PDF of this agenda</button></a></li>
+        <li><a href={% url 'agenda-distribute' meeting_id %}><button type="button" class="btn btn-primary saveonpress" data-toggle="button">Distribute this agenda</button></a></li>
+      </ul>
+  </div><!-- /.col-sm-3 -->
 
-{# MEETING DETAILS #}
- 
-<h1><small>Meeting details</small></h1>
+  <div class="col-sm-7 col-sm-offset-4 main">
 
-	{% ifequal editable_section 'is_meeting_details' %}
-		<div class="row">
-  		<div class="col-md-6">
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				
-				{% for hidden in existing_data_forms.hidden_fields %}
-   					<div class="form-group">
-   						{{ hidden }}
-   					</div>
-				{% endfor %}	
+    <div class="top-spacer">
+    </div>
+    
+    <img src="{{ MEDIA_URL }}tmp/agenda_1_page1.png" width=100%>
+    
+    <div class="bottom-spacer">
+    </div>  
 
-    			{% for field in existing_data_forms.visible_fields %}
-					<div>
-			   			{{ field.label_tag }}
-			   			{% ifequal field.label "Date" %}
-      						<br>
-      						{{ field }}
-      					{% else %}
-	      					{{ field|setclass:"form-control" }}
-	      				{% endifequal %}
-					</div>
-					<br>
-				{% endfor %}
-   			 	<button type="submit" class="btn btn-primary" name="save_meeting_details_button" value="save_meeting_details" data-toggle="button">Save meeting details</button>
-				<button type="submit" class="btn btn-default" name="cancel_meeting_details_button" value="cancel_meeting_details" data-toggle="button">Discard changes</button>
-				<button type="submit" class="btn btn-danger" name="delete_meeting_button" value="delete_meeting" data-toggle="button">Delete meeting</button>
-			</form>
-		</div>
-		</div>
-		</div>
-
-	{% else %}
-
-	<div class="row">
-  	<div class="col-md-6">
-  	<div class="well">
-		<div class="panel panel-primary">
-			
-		<table class="table">
-			<thead>
-				<tr>
-					<th>{{ meeting.description }} of {{ account.group_name }}</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody> 
-				<tr>
-					<td><strong>Date</strong></td>
-					<td>{{ meeting.date }}</td>
-				</tr>
-				<tr>
-					<td><strong>Time</strong></td>
-					<td>**2:00pm**</td>
-				</tr>
-				<tr>
-					<td><strong>Scheduled duration</strong></td>
-					<td>{{ meeting_duration }} minutes</td>
-				</tr>
-				<tr>
-					<td><strong>Location</strong></td>
-					<td>{{ meeting.location|linebreaks }}</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-		{% ifequal editable_section 'none' %}
-			<form action="" method="POST">
-				{% csrf_token %}
-				<button type="submit" class="btn btn-default" name="edit_meeting_details_button" value="edit_meeting_details" data-toggle="button">Edit meeting details</button>
-			</form>
-		{% endifequal %}
-	</div>
-	</div>
-	</div>
-	{% endifequal %}
-
-
-{# PRELIMINARY ITEMS #}
-
-<h1><small>Preliminary items</small></h1>
-
-	{% ifequal editable_section 'is_preliminary_items' %}
-
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				{{ existing_data_formset.management_form }}
-				{% for item in existing_data_formset %}
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							{{ item.heading|setclass:"form-control" }}
-						</div>
-						<div class="panel-body">
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}    
-								{{ item.id|setclass:"form-control" }}
-						    	{{ item.variety|setclass:"form-control" }}
-						    	<br>
-						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
-						</div>
-					</div>
-				{% endfor %}
-				<button type="submit" class="btn btn-primary" name="save_preliminary_items_button" value="save_preliminary_items" data-toggle="button">Save preliminary items</button>
-			</form>
-		</div>
-
-	{% else %}
-
-		<div class="well">
-			{% for item in preliminary_items %}
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<strong>{{ item.heading }}</strong>
-						<p class="pull-right">{{ item.time_limit}} minutes</p>
-					</div>
-					{% ifnotequal item.background '' %}
-						<div class="panel-body">
-							{{ item.background|linebreaks }}
-						</div>
-					{% endifnotequal %}
-				</div>
-			{% endfor %}
-			{% ifequal editable_section 'none' %}
-				<form action="" method="POST">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-default" name="edit_preliminary_items_button" value="edit_preliminary_items" data-toggle="button">Edit preliminary items</button>
-					<button type="submit" class="btn btn-default" name="add_preliminary_item_button" value="add_preliminary_item" data-toggle="button">Add a preliminary item</button>
-				</form>
-			{% endifequal %}
-		</div>
 		
-	{% endifequal %}
-
-
-
-
-
-
-{# TASKS REVIEW #}
-<h1><small>Task review</small></h1>
-<div class="well">
-	{# List of incomplete tasks #}
-	<h2><small>Tasks outstanding</small></h2>
-	<div class="panel panel-primary">
-		<table class="table">
-			<thead>
-				<tr>
-					{% for heading in task_list_headings %}
-						<th>{{ heading }}</th>
-					{% endfor%}
-				</tr>
-			</thead>
-			<tbody> 
-				{% for task in incomplete_task_list %}
-					<tr>
-						<td>{{ task.description }}</td>
-						<td>{{ task.participant }}</td>
-						<td>{{ task.deadline }}</td>
-					</tr>
-				{% empty %}
-					<tr>
-						<td>None</td>
-					</tr>
-				{% endfor%}
-			</tbody>
-		</table>
-	</div>
-	{# List of tasks completed since last meeting #}
-	<h2><small>Tasks completed since last meeting</small></h2>
-	<div class="panel panel-primary">
-		<table class="table">
-			<thead>
-				<tr>
-					{% for heading in task_list_headings %}
-						<th>{{ heading }}</th>
-					{% endfor%}
-				</tr>
-			</thead>
-			<tbody> 
-				{% for task in completed_task_list %}
-					<tr>
-						<td>{{ task.description }}</td>
-						<td>{{ task.participant }}</td>
-						<td>{{ task.deadline }}</td>
-					</tr>
-				{% empty %}
-				<tr>
-					<td>None</td>
-				</tr>
-				
-				{% endfor%}
-			</tbody>
-		</table>
-	</div>
-	{% ifequal editable_section 'none' %}
-		<a href={% url 'task-list' %}><button type="button" class="btn btn-default" data-toggle="button">Edit tasks</button></a>
-	{% endifequal %}
-</div>
-
-
-{# REPORT ITEMS #}
-
-<h1><small>Reports</small></h1>
-
-	{% ifequal editable_section 'is_report_items' %}
-
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				{{ existing_data_formset.management_form }}
-				{% for item in existing_data_formset %}
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							{{ item.heading|setclass:"form-control" }}
-						</div>
-						<div class="panel-body">
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-								{{ item.explainer.label_tag }}{{ item.explainer|setclass:"form-control" }}
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}
-								{{ item.id|setclass:"form-control" }}
-						    	{{ item.variety|setclass:"form-control" }}
-						    	<br>
-						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
-						</div>
-					</div>
-				{% endfor %}
-				<button type="submit" class="btn btn-primary" name="save_report_items_button" value="save_report_items" data-toggle="button">Save report items</button>
-			</form>
-		</div>
-
-	{% else %}
-
-		<div class="well">
-			{% for item in report_items %}
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<strong>{{ item.heading }}</strong>
-						<p class="pull-right">{{ item.time_limit}} minutes</p>
-					</div>
-					<div class="panel-body">
-						<p class="text-muted">To be introduced by {{ item.explainer }}</p>
-						{{ item.background|linebreaks }}
-					</div>
-				</div>
-			{% endfor %}
-			{% ifequal editable_section 'none' %}
-				<form action="" method="POST">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-default" name="edit_report_items_button" value="edit_report_items" data-toggle="button">Edit reports</button>
-					<button type="submit" class="btn btn-default" name="add_report_item_button" value="add_report_item" data-toggle="button">Add a report</button>
-				</form>
-			{% endifequal %}
-		</div>
-		
-	{% endifequal %}
-
-
-{# MAIN ITEMS #}
-
-<h1><small>Main items</small></h1>
-
-	{% ifequal editable_section 'is_main_items' %}
-
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				{{ existing_data_formset.management_form }}
-				{% for item in existing_data_formset %}
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							{{ item.heading|setclass:"form-control" }}
-						</div>
-						<div class="panel-body">
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-								{{ item.explainer.label_tag }}{{ item.explainer|setclass:"form-control" }}
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}
-								{{ item.id|setclass:"form-control" }}
-						    	{{ item.variety|setclass:"form-control" }}
-						    	<br>
-						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
-						</div>
-					</div>
-				{% endfor %}
-				<button type="submit" class="btn btn-primary" name="save_main_items_button" value="save_main_items" data-toggle="button">Save main items</button>
-			</form>
-		</div>
-
-	{% else %}
-
-		<div class="well">
-			{% for item in main_items %}
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<strong>{{ item.heading }}</strong>
-						<p class="pull-right">{{ item.time_limit}} minutes</p>
-					</div>
-					<div class="panel-body">
-						<p class="text-muted">To be introduced by {{ item.explainer }}</p>
-						{{ item.background|linebreaks }}
-					</div>
-				</div>
-			{% endfor %}
-			{% ifequal editable_section 'none' %}
-				<form action="" method="POST">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-default" name="edit_main_items_button" value="edit_main_items" data-toggle="button">Edit main items</button>
-					<button type="submit" class="btn btn-default" name="add_main_item_button" value="add_main_item" data-toggle="button">Add a main item</button>
-				</form>
-			{% endifequal %}
-		</div>
-		
-	{% endifequal %}
-
-
-{# FINAL ITEMS #}
-
-<h1><small>Final items</small></h1>
-
-	{% ifequal editable_section 'is_final_items' %}
-
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				{{ existing_data_formset.management_form }}
-				{% for item in existing_data_formset %}
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							{{ item.heading|setclass:"form-control" }}
-						</div>
-						<div class="panel-body">
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}
-								{{ item.id|setclass:"form-control" }}
-						    	{{ item.variety|setclass:"form-control" }}
-						    	<br>
-						    	{{ item.DELETE.label_tag }}{{ item.DELETE|setclass:"form-control"}}
-						</div>
-					</div>
-				{% endfor %}
-				<button type="submit" class="btn btn-primary" name="save_final_items_button" value="save_final_items" data-toggle="button">Save final items</button>
-			</form>
-		</div>
-
-	{% else %}
-
-		<div class="well">
-			{% for item in final_items %}
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<strong>{{ item.heading }}</strong>
-						<p class="pull-right">{{ item.time_limit}} minutes</p>
-					</div>
-					{% ifnotequal item.background '' %}
-						<div class="panel-body">
-							{{ item.background|linebreaks }}
-						</div>
-					{% endifnotequal %}
-				</div>
-			{% endfor %}
-			{% ifequal editable_section 'none' %}
-				<form action="" method="POST">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-default" name="edit_final_items_button" value="edit_final_items" data-toggle="button">Edit final items</button>
-					<button type="submit" class="btn btn-default" name="add_final_item_button" value="add_final_item" data-toggle="button">Add a final item</button>
-				</form>
-			{% endifequal %}
-		</div>
-		
-	{% endifequal %}
-
-
-<h1><small>Distribute this agenda by email</small></h1>
-<div class="well">
-	<form action="" method="POST">
-	{% csrf_token %}
-	<div class="checkbox">
-		<label>
-			<input type="checkbox" name="all_participants" value="checked"><strong>All participants</strong>
-		</label>
-	</div>
-	<br>
-	{% for participant in participants %}
-		<div class="checkbox">
-   			 <label>
-      			<input type="checkbox" name="participant{{ participant.id }}" value="checked"> {{ participant }}
-    		</label>
-  		</div>
-	{% endfor %}
-	
-	<br>
-		<button type="submit" class="btn btn-primary" name="agenda_distribute_button" value="distribute_agenda" data-toggle="button">Distribute</button>
-	</form>
-</div>
+    </div><!-- /.col-sm-7 -->
+  </div><!-- ./row>
 
 
 
 {% endblock %}
+
+
