Cleaned up econvenor.js

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -107,7 +107,7 @@
       {% endifequal %}
       </div><!-- ./well -->
 
-    <div id="ajax-items">
+    <div id="ajax-main">
     </div>
       
 
