--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -1,6 +1,8 @@
 {% extends "app_base.html" %}
 {% load setclass %}
 
+{% load staticfiles %}
+
 {% block content %}
 
 
@@ -177,9 +179,14 @@
   </div><!-- ./row>
 
 
+{% endblock content%}
 
 
+{% block extrajs %}
 
-{% endblock %}
+<script src="{% static 'js/econvenor-ajax.js' %}"></script>
+
+{% endblock extrajs %}
+
 
 
