--- a/docs/templates/agenda_edit_ajax_sidebar.html
+++ b/docs/templates/agenda_edit_ajax_sidebar.html
@@ -2,9 +2,9 @@
 
 <ul class="nav nav-sidebar sortable">
       {% for item in items %}
-        <li id="sidebar_{{ item.item_no}}"><a href="#id_{{ item.item_no}}-heading" class="sidebar-heading tltip" id="sidebar_heading_{{ item.item_no}}" data-toggle="tooltip" title="Scroll to this item">
+        <li id="sidebar_{{ item.item_no}}"><a href="#id_{{ item.item_no}}-heading" class="sidebar-heading tltip" data-toggle="tooltip" title="Scroll to this item">
           <div>
-            {{ item.item_no}}. {{ item.heading }}
+            <span id="sidebar_heading_{{ item.item_no}}">{{ item.item_no}}. {{ item.heading }}</span>
             <div class="pull-right">
               <button type="button" class="btn btn-default btn-xs jsbutton tltip" id="delete_button_{{ item.item_no}}" data-toggle="tooltip" title="Delete item">
                 <span class="glyphicon glyphicon-remove"></span></button>
