Enabled remaining sidebar buttons with javascript functionality

--- a/docs/templates/agenda_edit_ajax_sidebar.html
+++ b/docs/templates/agenda_edit_ajax_sidebar.html
@@ -6,7 +6,7 @@
           <div>
             <span id="sidebar_heading_{{ item.item_no}}">{{ item.item_no}}. {{ item.heading }}</span>
             <div class="pull-right">
-              <button type="button" class="btn btn-default btn-xs jsbutton tltip" id="delete_button_{{ item.item_no}}" data-toggle="tooltip" title="Delete item">
+              <button type="button" class="btn btn-default btn-xs ajax-button tltip" id="delete_button_{{ item.item_no}}" data-toggle="tooltip" title="Delete item">
                 <span class="glyphicon glyphicon-remove"></span></button>
             </div><!-- ./pull-right -->
           </div>
