--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -18,16 +18,13 @@
     </div>
            
     <ul class="nav nav-sidebar">
-      <li><a href="#tasks" class="tltip" data-toggle="tooltip" data-placement="top" title="Scroll to tasks">Appendix 1 - Tasks</a></li>
+      <li><a href="#tasks" class="tltip" data-toggle="tooltip" data-placement="top" title="Scroll to tasks">Appendix 1. Tasks</a></li>
     </ul>
     <ul class="nav nav-sidebar">
-      <li><button type="button" class="btn btn-primary jsbutton" id="save_button">Save all</button></li>
-      <li><button type="button" class="btn btn-primary jsbutton" id="add_button">Add item</button></li>
-    </ul>
-    <ul class="nav nav-sidebar"> 
-        <li><a href={% url 'minutes-edit' meeting_id %}><button type="button" class="btn btn-primary saveonpress" data-toggle="button">Create minutes from this agenda</button></a></li>
-        <li><a href={% url 'agenda-print' meeting_id %}><button type="button" class="btn btn-primary saveonpress" data-toggle="button">Create a PDF of this agenda</button></a></li>
-        <li><a href={% url 'agenda-distribute' meeting_id %}><button type="button" class="btn btn-primary saveonpress" data-toggle="button">Distribute this agenda</button></a></li>
+      <li><button type="button" class="btn btn-primary ajax-button" id="save_button">Save all</button></li>
+      <li><button type="button" class="btn btn-primary ajax-button" id="add_button">Add item</button></li>
+      <li><button type="button" class="btn btn-primary navigate-button" goto="{% url 'minutes-edit' meeting_id %}" id="minutes_button">Create minutes</button></li>
+      <li><button type="button" class="btn btn-primary navigate-button" goto="{% url 'agenda-distribute' meeting_id %}" id="distribute_button">Distribute this agenda</button></li>
       </ul>
   </div><!-- /.col-sm-3 -->
 
